Add git repo url to presentation and README

--- a/presentation/presentation.html
+++ b/presentation/presentation.html
@@ -95,6 +95,13 @@ var app = express();
             </code>
           </pre>
         </section>
+
+        <section>
+          <h5>Let's begin</h5>
+          <a href="https://github.com/pablo-munoz/itesm-express-workshop">
+            https://github.com/pablo-munoz/itesm-express-workshop
+          </a>
+        </section>
       </div>
     </div>
 
